Fix visibility issue in AI chatbot

--- a/projects/AI-ChatBot/style.css
+++ b/projects/AI-ChatBot/style.css
@@ -51,7 +51,8 @@ body
 .ai-chat-area{
     width: 90%;
     padding: 20px;
-    background-color: rgba(0,0,0,0.361);
+    background-color: rgba(0, 0, 0, 0.527);
+    color: rgba(255, 255, 255, 0.826);
     position: relative;
     left: 10%;
     border-radius: 0px 40px 40px 40px;
@@ -93,8 +94,8 @@ body
     color: white;
     font: 20px;
     box-shadow: 2px 2px 10px black;
-
-
+    
+    
 }
 .prompt-area button{
     width: 60px;
@@ -111,20 +112,20 @@ body
 }
 .load
 {
-        filter: drop-shadow(2px 2px 10px black);
+    filter: drop-shadow(2px 2px 10px black);
 }
 .choose{
     width: 50px;
     height: 50px;
     border-radius: 50%;
-
+    
 }
 
 #image{
     display: flex;
     align-items: center;
     justify-content: center;
-
+    
 }
 @media (max-width:600px)
 {
